--- a/mandelbulber2/qt/dock_rendering_engine.ui
+++ b/mandelbulber2/qt/dock_rendering_engine.ui
@@ -527,15 +527,15 @@ bright</string>
         <property name="topMargin">
          <number>5</number>
         </property>
+        <item row="1" column="1">
+         <widget class="MyLineEdit" name="logedit_nebula_samples_per_pixel"/>
+        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Brightness</string>
           </property>
          </widget>
-        </item>
-        <item row="0" column="1">
-         <widget class="MyLineEdit" name="logedit_nebula_brightness"/>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_2">
@@ -544,8 +544,31 @@ bright</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="MyLineEdit" name="logedit_nebula_samples_per_pixel"/>
+        <item row="0" column="1">
+         <widget class="MyLineEdit" name="logedit_nebula_brightness"/>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Min. iteration to draw</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="MySpinBox" name="spinboxInt_nebula_min_iteration">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>9999</number>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
