--- a/mandelbulber2/formula/ui/koch_ifs.ui
+++ b/mandelbulber2/formula/ui/koch_ifs.ui
@@ -1844,6 +1844,16 @@ offset:</string>
     </widget>
    </item>
    <item>
+    <widget class="MyCheckBox" name="checkBox_analyticDE_enabled_false">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="text">
+      <string notr="true">custom DE</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="MyGroupBox" name="groupCheck_fold_color_aux_color_enabled_false">
      <property name="title">
       <string>aux color c&amp;omponents</string>
@@ -1922,7 +1932,7 @@ offset:</string>
         <item row="3" column="0">
          <widget class="QLabel" name="label_56">
           <property name="text">
-           <string>abs zc.z</string>
+           <string>negative diag fold:</string>
           </property>
          </widget>
         </item>
@@ -1957,7 +1967,7 @@ offset:</string>
         <item row="1" column="0">
          <widget class="QLabel" name="label_53">
           <property name="text">
-           <string>diagFold:</string>
+           <string>diagonal fold X&gt;Y:</string>
           </property>
          </widget>
         </item>
@@ -1999,7 +2009,7 @@ offset:</string>
         <item row="2" column="0">
          <widget class="QLabel" name="label_55">
           <property name="text">
-           <string>abs zc.x</string>
+           <string>positive diag fold</string>
           </property>
          </widget>
         </item>
